Fix critical security vulnerabilities and functional bugs
Security Fixes:
- SSH adapter: Replace AutoAddPolicy with proper host key validation
- SSH adapter: Add credential validation for key/password requirement

Bug Fixes:
- CAN adapter: Replace bare except with specific exception handling
- Config loader: Enhance YAML parsing with proper error detection
- Test decorators: Fix incorrect pytest marker creation syntax
- Template discovery: Rename test_template.py to prevent pytest collection

Code Quality:
- CLI tests: Convert template placeholders to functional test implementations
- Error handling: Improve error messages with better context and logging
- Platform filtering: Validate recent test registry improvements work correctly

The framework now follows security best practices and has robust error handling
throughout the codebase.

--- a/config/pytest.ini
+++ b/config/pytest.ini
@@ -9,6 +9,16 @@ python_functions = test_*
 # Test paths
 testpaths = tests
 
+# Exclude patterns (avoid collecting template files as tests)
+norecursedirs =
+    .git
+    .tox
+    dist
+    build
+    *.egg
+    framework/templates
+    scripts
+
 # Minimum Python version
 minversion = 3.9
 
